fixed some spacing

--- a/CSS/media-queries.css
+++ b/CSS/media-queries.css
@@ -88,7 +88,7 @@ footer {
 
     li a {
         display: block;
-        padding-left: 0px;
+        padding-left: 0;
         width: 304px;
         margin: 3px;
         text-align: center;
